[metadata]
name = Logges
author = Serkan UYSAL
maintainer = Ozkan UYSAL
author_email = uysalserkan08@gmail.com
maintainer_email = ozkan.uysal.2009@gmail.com
description_file = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/uysalserkan/Logges

[options]
package_dir = src