[metadata]
name = Logges
author = Serkan UYSAL, Ozkan UYSAL
maintainer = Ozkan UYSAL
author_email = uysalserkan08@gmail.com
maintainer_email = ozkan.uysal.2009@gmail.com
description_file = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/uysalserkan/Logges

[options]
package_dir = src
install_requires =
        matplotlib==3.5.2
        rich==10.16.2
        reportlab==3.5.67
        click==8.0.4
